--- a/package.json
+++ b/package.json
@@ -33,47 +33,46 @@
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
+    "upgrade-cdklabs-projen-project-types": "npx projen upgrade-cdklabs-projen-project-types",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
   "author": {
-    "name": "Amazon Web Services, Inc.",
+    "name": "Amazon Web Services",
     "email": "aws-cdk-dev@amazon.com",
-    "organization": false
+    "organization": true
   },
   "devDependencies": {
-    "@aws-cdk/integ-runner": "^2.45.0",
+    "@aws-cdk/integ-runner": "latest",
     "@aws-cdk/integ-tests-alpha": "latest",
-    "@types/jest": "^27",
+    "@types/jest": "^29",
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk-lib": "^2.40.0",
+    "cdklabs-projen-project-types": "^0.1.136",
     "constructs": "^10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^27",
+    "jest": "^29",
     "jest-junit": "^15",
-    "jsii": "1.x",
-    "jsii-diff": "^1.82.0",
+    "jsii": "^5",
+    "jsii-diff": "^1.83.0",
     "jsii-docgen": "^7.2.9",
-    "jsii-pacmak": "^1.82.0",
+    "jsii-pacmak": "^1.83.0",
+    "jsii-rosetta": "^5",
     "npm-check-updates": "^16",
-    "projen": "^0.71.68",
+    "projen": "^0.71.91",
     "standard-version": "^9",
-    "ts-jest": "^27",
+    "ts-jest": "^29",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.0.0",
     "constructs": "^10.0.5"
-  },
-  "resolutions": {
-    "@types/babel__traverse": "7.18.2",
-    "@types/prettier": "2.6.0"
   },
   "keywords": [
     "cdk"
