--- a/.github/workflows/custom-upgrade-awscli-v2-main.yml
+++ b/.github/workflows/custom-upgrade-awscli-v2-main.yml
@@ -25,6 +25,7 @@ jobs:
           sudo apt update
           sudo apt install -y jq
           pipx install semver
+          pipx ensurepath
       - name: Check for awscli version upgrades
         run: python3 .github/scripts/upgrade-awscli-version.py
       - id: create_patch
