--- a/package.json
+++ b/package.json
@@ -48,25 +48,23 @@
     "@aws-cdk/integ-tests-alpha": "latest",
     "@types/jest": "^29",
     "@types/node": "^16",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
+    "@typescript-eslint/eslint-plugin": "^7",
+    "@typescript-eslint/parser": "^7",
     "aws-cdk-lib": "^2.40.0",
-    "cdklabs-projen-project-types": "^0.1.166",
+    "cdklabs-projen-project-types": "^0.1.204",
+    "commit-and-tag-version": "^12",
     "constructs": "^10.0.5",
     "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "jest": "^29",
     "jest-junit": "^15",
     "jsii": "^5",
-    "jsii-diff": "^1.91.0",
-    "jsii-docgen": "^7.2.9",
-    "jsii-pacmak": "^1.91.0",
+    "jsii-diff": "^1.103.1",
+    "jsii-docgen": "^10.5.0",
+    "jsii-pacmak": "^1.103.1",
     "jsii-rosetta": "^5",
-    "npm-check-updates": "^16",
-    "projen": "^0.76.15",
-    "standard-version": "^9",
+    "projen": "^0.87.4",
     "ts-jest": "^29",
     "ts-node": "^10.9.1",
     "typescript": "^5"
@@ -86,9 +84,12 @@
   },
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/@(projenrc)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(projenrc)/**/__tests__/**/*.ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -118,11 +119,13 @@
         }
       ]
     ],
-    "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.dev.json"
-      }
+    "transform": {
+      "^.+\\.[t]sx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.dev.json"
+        }
+      ]
     }
   },
   "types": "lib/index.d.ts",
